app/assets/stylesheets/application.scss
/* ... */
//
// .out-res-index ul li {
//   display: block;
// }
.greeting {
  color: #ddd;
  font-size: 37px;
  position: relative;
  padding-bottom: 20px;
  text-align: center;
  margin-left: 160px;
}

.rocket-index-container {
  color: #ddd;
  font-size: 24px;
}

.thumbnail-rocket {
  width: 190px;
  height: 110px;
  border-radius: 10px;
  position: absolute;
  margin-left: 167px;
  margin-top: -26px;
}

.pending-res {
  color: #fe9b00;
  margin-left: 25px;
}

.res-rocket {
  position: relative;
  font-size: 22px;
  margin-left: 25px;
}

.res-desc {
  font-size: 16px;
  margin-top: 28px;
  position: absolute;
  margin-left: 25px;
  width: 128px;
}

.inc-res-body {
  color: #444;
  position: relative;
  float: right;
  width: 100%;
  z-index: 1;
  margin-bottom: 10px;
}

.decider {
  position: relative;
  float: right;
}

.inc-res-text {
  position: relative;
  float: left;
  margin-left: 10px;
  width: 45%;
}

.creator-pic {
  border-radius: 15px;
  float: left;
  margin-top: 5px;
}

.deny-button {
  border-radius: 15px;
  height: 40px;
  background-color: #cc6666;
  position: relative;
  float: right;
  color: #444;
  border: none;
  margin-left: 5px;
  width: 90px;
}

.deny-button:hover {
  color: #ddd;
  border: none;
  background-color: #cc6666;
}

.approve-button {
  border-radius: 15px;
  background-color: #9999ff;
  height: 40px;
  position: relative;
  color: #444;
  border: none;
  width: 90px;
  float: left;
}

.approve-button:hover {
  color: #ddd;
  border: none;
  background-color: #9999ff;
}

.cancel-button {
  border-radius: 15px;
  height: 40px;
  color: #444;
  border: none;
  background-color: #cc99cc;
}

.cancel-button:hover {
  color: #ddd;
  background-color: #cc99cc;
  border: none;
}

.approved-res {
  color: #cc99cc;
  padding-left: 25px;
}
.rating-form {
  color: #ddd;
  position: relative;
  margin-left: 200px;
  background-color: black;
  margin-top: 25px;
  width: 45%;
  float: left;
}

.rating-label {
  font-size: 19px;
  margin-bottom: 15px;
  margin-right: 10px;
}

.rating-input {
  width: 40px;
  border-radius: 5px;
  border: none;
  height: 24px;
  color: #444;
}

.rating-input-body {
  font-size: 18px;
  color: #444;
  border-radius: 10px;
  border: none;
  padding: 5px;
}

.ratings-show {
  position: relative;
  float: right;
  margin-top: 25px;
  width: 38%;
}

.ratings-list {
  position: relative;
  display: inline;
  float: left;
}

.ratings-header {
  font-size: 19px;
  color: #ddd;
}

.rating-body {
  color: #ddd;
  float: left;
  position:relative;
  margin-left: 10px;
}
#rating-submit {
  border-radius: 15px;
  background-color: #9999cc;
  color: #444;
  border: none;
  height: 40px;
  font-size: 18px;
  margin-top: 19px;
  width: 200px;

}

#rating-submit:hover {
  color: #ddd;
  border: none;
  background-color: #9999cc;
}
.rating-show {
  color: #ddd;
}
//
// .rating-body {
//   color: #ddd;
// }

#rocket-cap {
  width: 100px;
  display: inline;
  margin-left: 179px;
  height: 45px;
}

.cap-label {
  font-size: 24px;
  color: #ddd;
  padding-left: 210px;
  width: 42%;
}

.index-button {
  width: 200px;
  height: 50px;
  border: none;
  background: #cc99cc;
  color: #444;
  font-size: 20px;
  border-radius: 15px;
  position: relative;
  margin-left: 28%;
}

.index-button:hover {
  color: #ddd;
  border: none;
  background-color: #cc99cc;
}

.list-rocket-button {
  width: 200px;
  height: 50px;
  border: none;
  border-radius: 15px;
  background-color: #fe9b00;
  font-size: 20px;
  color: #444;
  margin-left: 25%;
}

.list-rocket-button:hover {
  border: none;
  background-color: #fe9b00;
  color: #ddd;
}

.fa-2x {
  font-size: 18px;
  margin-left: -10px;
}

.user-mini-pic {
  border-radius: 10px;
  margin-right: 5px;
}

.rating-text {
  margin-left: 45px;
}

.rating-num {
  background: #ddd;
  color: #444;
  padding: 3px;
  border-radius: 10px;
  margin-right: 7px;
}

.captain-pic {
  border-radius: 15px;
}
.group:after {
  content: "";
  display: table;
  clear: both;
}


/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */

